gccida/c3/etrunci
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/etrunci/src/real.c:1159:17: error: conflicting types for 'etrunci'
realvaluetype * etrunci( realvaluetype *retstr, realvaluetype x) 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/etrunci/src/real.h:146:24: note: previous declaration is here
extern REAL_VALUE_TYPE etrunci  PARAMS ((REAL_VALUE_TYPE));
                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/etrunci/src/real.c:1187:12: error: expected expression
*( _OWORD *)v11 = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/etrunci/src/real.c:1187:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v11 = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/etrunci/src/real.c:1240:12: error: expected expression
*( _OWORD *)v11 = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/etrunci/src/real.c:1240:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v11 = 0LL; 
   ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/etrunci/src/obj/real.o] Error 1
